# AndroidOboeRustExample

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/ru/teplicate/oboemanipulator/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/ru/teplicate/oboemanipulator/: MainActivity.kt  NativeLayer.kt
app/src/main/java/ru/teplicate/oboemanipulator/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/ru/teplicate/oboemanipulator/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/oboelayer/: Cargo.toml
rust/oboelayer/src/: lib.rs  wav_player.rs
