[package]
name = "oboelayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oboe = { version = "0.5.0", features = ["java-interface", "shared-stdcxx"] }
jni = "0.21.1"
hound = "3.5.0"
android_logger = "0.11"
log = "0.4.17"

[lib]
name = "oboelib"
crate-type = ["cdylib"]
